# mcp-windows-website-downloader

./: .gitignore  README.md  config.json  dev_plan.md  pyproject.toml
examples/: coding-assistance-workflow.md  download_docs.py
examples/devdocs.io_/: index.html
examples/devdocs.io_/css/: devdocs.io_assets_application-a30e6a8bef22ffec121d8bbf58cdf579074635e9b50f7df663a3fa07c8fd58de.css
examples/devdocs.io_/js/: devdocs.io_assets_application-2cc7e5ec085810fe76d8b3ab051e377ca4da75b337bbb7ad4ce2fbbafdba2794.js  devdocs.io_assets_docs-16de828688bf6694856b668de5b2d34c9144b4c42acdac04255ff0bcabea13c4.js
examples/docs.djangoproject.com_en_5.1_/: index.html
examples/docs.djangoproject.com_en_5.1_/css/: fonts.googleapis.com_css2  static.djangoproject.com_css_output.ed89d4b4876d.css
examples/modelcontextprotocol.io/: index.html
examples/modelcontextprotocol.io/css/: modelcontextprotocol.io__next_static_css_dc50e134f609f53d.css
examples/modelcontextprotocol.io/js/: modelcontextprotocol.io__next_static_chunks_5339-6302864997cfb970.js  modelcontextprotocol.io__next_static_chunks_6208-02748a59dcae69c1.js  modelcontextprotocol.io__next_static_chunks_9097-53b32b020063004a.js  modelcontextprotocol.io__next_static_chunks_main-97ddff1d6be4d33f.js  modelcontextprotocol.io__next_static_chunks_pages__app-a6c9ee879906fd49.js  modelcontextprotocol.io__next_static_chunks_pages__sites_%5Bsubdomain%5D_%5B%5B...slug%5D%5D-fe32187241f924ae.js  (+3 more)
src/mcp_windows_website_downloader/: __init__.py  __main__.py  downloader.py  handlers.py  processor.py  server.py
(+3 files in other folders)
