[project]
name = "mcp-windows-website-downloader"
version = "0.1.0"
description = "MCP server for downloading websites"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-windows-website-downloader = "mcp_windows_website_downloader.server:main"